src/objects/XSBUProduct__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Global SKU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>X-SBU Products</relationshipLabel>
        <relationshipName>X_SBU_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_line__c</fullName>
        <label>Product line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Line</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuestionnaireSetup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Setup</label>
        <referenceTo>Questionnaire_Setup__c</referenceTo>
        <relationshipLabel>X-SBU Products</relationshipLabel>
        <relationshipName>X_SBU_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>X-SBU Product</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>X-SBU Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>X-SBU Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>